<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:backgroundTint="#4DAEEA00"
    android:backgroundTintMode="screen"
    tools:context=".Quizlet">

    <TextView
        android:id="@+id/ScoreView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsundayt"
        android:gravity="center"
        android:text="@string/Score"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_id_Score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_id_Score"
        android:layout_width="46dp"
        android:layout_height="21dp"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/ScoreInt"
        android:textColor="#1B1919"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/LifeView"
        app:layout_constraintStart_toEndOf="@+id/ScoreView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LifeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsundayt"
        android:gravity="center"
        android:text="@string/Life"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_id_Life"
        app:layout_constraintStart_toEndOf="@+id/txt_id_Score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_id_Life"
        android:layout_width="52dp"
        android:layout_height="22dp"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/LifeInt"
        android:textAlignment="viewStart"
        android:textColor="#0C0C0C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/TimeView"
        app:layout_constraintStart_toEndOf="@+id/LifeView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TimeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsundayt"
        android:gravity="center"
        android:text="@string/Time"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_id_Time"
        app:layout_constraintStart_toEndOf="@+id/txt_id_Life"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_id_Time"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/TimeInt"
        android:textColor="#020202"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TimeView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_id_Question"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/nextsundayt"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#1C1C1C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_Time"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/txt_id_Answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/Answer"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_Question"
        tools:ignore="HardcodedText,LabelFor" />

    <Button
        android:id="@+id/btn_id_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/OK"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_Answer" />

    <Button
        android:id="@+id/btn_id_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/Next"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_id_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>
