<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain"
    android:backgroundTint="#59E8C377"
    android:backgroundTintMode="screen"
    tools:context=".result">

    <TextView
        android:id="@+id/congratsView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/nextsundayt"
        android:gravity="center"
        android:text="@string/Congratulations"
        android:textColor="#FFD600"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourScoreView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsundayt"
        android:gravity="center"
        android:text="@string/YourScore"
        android:textColor="#00C853"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="309dp"
        android:layout_height="84dp"
        android:layout_marginTop="164dp"
        app:cardBackgroundColor="#E6DBA0"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourScoreView">

        <TextView
            android:id="@+id/txtview_id_result"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:fontFamily="@font/nextsundayt"
            android:gravity="center"
            android:text="@string/ScoreInt"
            android:textColor="#050505"
            android:textSize="48sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_id_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/PlayAgain"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <Button
        android:id="@+id/btn_id_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/Exit"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_id_play" />

</androidx.constraintlayout.widget.ConstraintLayout>
