<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:backgroundTint="#26AEEA00"
    android:backgroundTintMode="screen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_id_add"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/Addition"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_id_subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_id_subtract"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/Subtraction"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_id_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_id_add" />

    <Button
        android:id="@+id/btn_id_multiplication"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/nextsundayt"
        android:text="@string/Multiplication"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_id_subtract" />

</androidx.constraintlayout.widget.ConstraintLayout>
